--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,5 +3,6 @@ include biograder/data_bio462_hw1/index_urls.tsv
 include biograder/data_bio462_hw2/index_urls.tsv
 include biograder/data_bio462_hw3/index_urls.tsv
 include biograder/data_bio462_hw4/index_urls.tsv
+include biograder/data_bio462_hw4_1/index_urls.tsv
 include biograder/data_bio462_hw5/index_urls.tsv
 include biograder/data_bio462_hw6/index_urls.tsv
